--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -1,5 +1,6 @@
 {
   "name": "personal-portfolio",
+  "homepage": "https://loganjones.in/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
